--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -189,6 +189,9 @@ section h2 {
   color: #7a0000;
   text-decoration: none;
 }
+#footer a:hover {
+  text-decoration: underline ;
+}
 
 section {
     margin-bottom:36px;
