Agregando estructura flexible al body

--- a/css/productos.css
+++ b/css/productos.css
@@ -303,6 +303,11 @@ html, body {
     height: 100%;
     margin: 0;
 }
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
 @media (max-width: 1024px) {
   header {
