--- a/css/productos.css
+++ b/css/productos.css
@@ -308,6 +308,9 @@ body {
     flex-direction: column;
     min-height: 100vh;
 }
+main {
+    flex: 1;
+}
 
 @media (max-width: 1024px) {
   header {
