--- a/css/productos.css
+++ b/css/productos.css
@@ -311,7 +311,14 @@ body {
 main {
     flex: 1;
 }
-
+.main-footer {
+    width: 100%;
+    background-color: #000; 
+    color: #fff;
+    text-align: center;
+    padding: 15px 0;
+    border-top: 1px solid rgb(235, 15, 15);
+}
 @media (max-width: 1024px) {
   header {
     flex-direction: column;
