Agregando estilos a los enlaces del footer

--- a/css/productos.css
+++ b/css/productos.css
@@ -323,6 +323,12 @@ main {
     font-size: 1.2em;
     margin-bottom: 5px;
 }
+.footer-content p a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
+    transition: color 0.3s ease-in-out, opacity 0.3s;
+}
 @media (max-width: 1024px) {
   header {
     flex-direction: column;
