--- a/css/productos.css
+++ b/css/productos.css
@@ -479,3 +479,16 @@ main {
   color: white;
   transform: scale(1.05);
 }
+.modal-cargando {
+  display: none; /* Oculto por defecto */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(10, 10, 10, 0.7);
+  backdrop-filter: blur(4px);
+  z-index: 2000;
+  justify-content: center;
+  align-items: center;
+}
