--- a/css/productos.css
+++ b/css/productos.css
@@ -492,3 +492,12 @@ main {
   justify-content: center;
   align-items: center;
 }
+.modal-contenido {
+  background: linear-gradient(135deg, #111, #1e1e1e);
+  color: white;
+  padding: 30px 50px;
+  border-radius: 12px;
+  text-align: center;
+  box-shadow: 0 0 20px rgba(255, 0, 0, 0.4);
+  animation: aparecerModal 0.4s ease;
+}
