--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -18,7 +18,11 @@
     * { transition: none !important; animation: none !important; scroll-behavior: auto !important; }
 }
 
-* { margin:0; padding:0; box-sizing:border-box; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
+* { margin:0; 
+  padding:0; 
+  box-sizing:border-box; 
+  -webkit-font-smoothing:antialiased; 
+  -moz-osx-font-smoothing:grayscale; }
 html, body {
   height:100%;
   background: linear-gradient(180deg, var(--bg) 0%, #0b0b0b 60%);
