--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -31,6 +31,7 @@ html, body {
   line-height:1.6;
   -webkit-font-smoothing:antialiased;
   scroll-behavior: smooth;
+   overflow-x: hidden;
 }
 main{
     max-width: var(--max-width);
