--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -41,6 +41,10 @@ html, body {
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
 }
+.particula {
+  
+}
+
 main{
     max-width: var(--max-width);
     margin: 48px auto;
