--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -45,6 +45,7 @@ html, body {
    position: fixed;
      width: 6px;
   height: 6px;
+   background: radial-gradient(circle, #ffffff, transparent);
 }
 
 main{
