--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -49,6 +49,7 @@ html, body {
     border-radius: 50%;
      animation: flotar 10s linear infinite;
       pointer-events: none;
+        opacity: 0.8;
 }
 
 main{
