--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -57,7 +57,10 @@ html, body {
     transform: translate(0, 0) scale(1);
     opacity: 0.9;
   }
-  
+  50% {
+    transform: translate(20px, -50vh) scale(1.1);
+    opacity: 0.6;
+  }
 
 }
 
