--- a/css/productos.css
+++ b/css/productos.css
@@ -26,7 +26,7 @@ body{
   100% { background-position: 0% 50%; }
 }
 .particula {
-  position: fixed;
+  position: absolute;
   width: 6px;
   height: 6px;
   background: radial-gradient(circle, #ffffff, transparent);
