--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -61,11 +61,12 @@ html, body {
     transform: translate(20px, -50vh) scale(1.1);
     opacity: 0.6;
   }
+ 100% {
+    transform: translate(-20px, -100vh) scale(0.8);
+    opacity: 0;
+  }
 
 }
-
-
-
 
 
 main{
