--- a/css/productos.css
+++ b/css/productos.css
@@ -541,3 +541,9 @@ main {
   #navegacion ul {
     display: none; 
   }
+  .menu-toggle {
+    display: block;
+    font-size: 28px;
+    color: white;
+    cursor: pointer;
+  }
