--- a/css/productos.css
+++ b/css/productos.css
@@ -547,3 +547,13 @@ main {
     color: white;
     cursor: pointer;
   }
+  #navegacion.active ul {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+    background: rgba(0, 0, 0, 0.85);
+    padding: 10px;
+    border-radius: 8px;
+  }
+}
