--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -370,6 +370,16 @@ section li { margin-bottom:10px; color:var(--muted); }
   animation: aparecerModal 0.4s ease;
 }
 
+.loader {
+  border: 5px solid rgba(255, 255, 255, 0.2);
+  border-top: 5px solid #ff0000;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto 15px;
+  animation: girar 1s linear infinite;
+}
+
 
 
 .animar { transition: transform var(--transition-med) ease-in-out; }
