--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -385,6 +385,10 @@ section li { margin-bottom:10px; color:var(--muted); }
   to { transform: rotate(360deg); }
 }
 
+@keyframes aparecerModal {
+  from { opacity: 0; transform: scale(0.8); }
+  to { opacity: 1; transform: scale(1); }
+}
 
 
 .animar { transition: transform var(--transition-med) ease-in-out; }
