Agregando estilos base para ocultar el botón del menú por defecto

--- a/css/productos.css
+++ b/css/productos.css
@@ -529,3 +529,9 @@ main {
 .logo img {
   display: block;
 }
+.menu-toggle {
+  display: none; /* oculto por defecto */
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+}
