Agregando estilos para los enlaces de navegación con color blanco y texto en negrita

--- a/css/productos.css
+++ b/css/productos.css
@@ -540,3 +540,8 @@ main {
   gap: 20px;
   list-style: none;
 }
+#navegacion a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
