--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -474,3 +474,7 @@ section li { margin-bottom:10px; color:var(--muted); }
   text-decoration: none;
   font-weight: bold;
 }
+
+#navegacion a:hover {
+  color: #b30000; /* bordó */
+}
