--- a/css/index.css
+++ b/css/index.css
@@ -41,6 +41,13 @@ body {
     transform: scale(1.1);
 }
 
+.logo img.logo-clicked {
+    transform: scale(1.3) rotate(5deg);
+    filter: drop-shadow(0 0 10px #ff0000)
+    drop-shadow(0 0 20px #ff6666);
+
+}
+
 .nav-links {
     list-style: none;
     display: flex;
