--- a/css/index.css
+++ b/css/index.css
@@ -138,12 +138,12 @@ body {
     font-weight: 300;
 }
 
-.text-content p: :nth-of-type(1) {
+.text-content p:nth-of-type(1) {
     animation: fade-in-up 1s ease-out forwards;
     animation-delay: 1.5s;
 }
 
-.text-content p: :nth-of-type(2) {
+.text-content p:nth-of-type(2) {
     animation: fade-in-up 1s ease-out forwards;
     animation-delay: 2.5s;
 }
