--- a/css/index.css
+++ b/css/index.css
@@ -71,7 +71,7 @@ body {
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url();
+    background-image: url(../galeria/fondomenu.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
