Modificando nombre de clase contacto

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -160,8 +160,8 @@ outline-offset:6px;
   color: #ffffff;
   border-radius: 5px;
 }
-
-.contacto-junto {
+/*yo ^*/
+.contacto {
   text-align: center;
   padding: 80px 20px;
   color: white;
