Modificando valores y productos de clase contacto.

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -162,11 +162,11 @@ outline-offset:6px;
 }
 /*yo ^*/
 .contacto {
+  width: 100vw;
   text-align: center;
-  padding: 80px 20px;
-  color: white;
+  padding: 60px 0;
   position: relative;
-  z-index: 1;
+  transition: all 0.3s ease;
 }
 
 
