--- a/css/contactos.css
+++ b/css/contactos.css
@@ -171,13 +171,14 @@ outline-offset:6px;
 
 
 .intro h1 {
-  margin-top: 40px;
-  text-align: center;
-  font-size: 3.5rem;
+    font-size: 2.5rem;
+  font-weight: 800;
   color: white;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-style: italic;
-  font-weight: 100;
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 6px;
+  margin-bottom: 15px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
 .intro p {
   font-size: 18px;
