--- a/css/contactos.css
+++ b/css/contactos.css
@@ -180,7 +180,9 @@ outline-offset:6px;
   margin-bottom: 15px;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
+.subtitulo {
 
+}
 
 .grid-container {
   display: flex;
