--- a/css/contactos.css
+++ b/css/contactos.css
@@ -181,7 +181,9 @@ outline-offset:6px;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
 .subtitulo {
-
+  font-size: 1rem;
+  margin-bottom: 40px;
+  color: #ccc;
 }
 
 .grid-container {
