Modificando valores y productos a clase grid-container

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -189,9 +189,11 @@ outline-offset:6px;
 .grid-container {
   display: flex;
   justify-content: center;
-  gap: 40px;
+  align-items: center;
   flex-wrap: wrap;
-  
+  gap: 30px;
+  width: 100%;
+  padding: 0 5vw;
 }
 
 .contacto {
