--- a/css/contactos.css
+++ b/css/contactos.css
@@ -196,7 +196,23 @@ outline-offset:6px;
   padding: 0 5vw;
 }
 .contacto-cj {
-  
+  position: relative;
+  background: rgba(82, 82, 82, 0.7);
+  border-radius: 16px;
+  padding: 30px;
+  width: 280px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  box-shadow: 0 0 15px rgba(77, 77, 77, 0.5);
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 0.5s ease;
+  overflow: hidden;
+  z-index: 0; 
 }
 
 /*modifica esto */
