--- a/css/contactos.css
+++ b/css/contactos.css
@@ -222,6 +222,10 @@ outline-offset:6px;
   transform: scale(1.2); 
   color: #471212;
  }
+.contacto.cj h3 { 
+  color: rgb(126, 126, 126); 
+  margin-bottom: 10px; 
+}
 
 
 
