--- a/css/productos.css
+++ b/css/productos.css
@@ -343,6 +343,10 @@ main {
     color: #ff0000;
     opacity: 0.8;
 }
+.copyright {
+    font-size: 0.8em;
+    color: #ff0000;
+}
 @media (max-width: 1024px) {
   header {
     flex-direction: column;
