--- a/css/productos.css
+++ b/css/productos.css
@@ -128,6 +128,7 @@ h1 {
 
 section, main > .turbos {
   background: #1e1e1e;
+  color: white;
   margin: 20px auto;
   padding: 24px;
   max-width: 1000px;
