--- a/css/servicios.css
+++ b/css/servicios.css
@@ -220,7 +220,17 @@ section h2 {
   gap: 10px;
   padding-left: 20px; 
 }
-
+.main-footer {
+    width: 100%;
+    background-color: #000; 
+    color: #fff;
+    text-align: center;
+    padding: 15px 0;
+    border-top: 1px solid rgb(235, 15, 15);
+    position: static;
+    bottom: 0;
+    z-index: 10;
+}
 
 section {
     margin-bottom:36px;
