--- a/css/servicios.css
+++ b/css/servicios.css
@@ -235,6 +235,13 @@ section h2 {
     font-size: 1.2em;
     margin-bottom: 5px;
 }
+.footer-content p a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
+    transition: color 0.3s ease-in-out, opacity 0.3s;
+}
+
 
 
 section {
