--- a/css/servicios.css
+++ b/css/servicios.css
@@ -241,6 +241,11 @@ section h2 {
     margin: 0 10px;
     transition: color 0.3s ease-in-out, opacity 0.3s;
 }
+.footer-content p a:hover {
+    color: #ff0000;
+    opacity: 0.8;
+}
+
 
 
 
