--- a/css/productos.css
+++ b/css/productos.css
@@ -569,12 +569,14 @@ main {
    #navegacion ul {
     display: none;
     flex-direction: column;
-    background: rgba(0, 0, 0, 0.9);
-    padding: 10px;
+    gap: 15px;
     position: absolute;
     top: 80px;
     right: 20px;
+    background: rgba(0, 0, 0, 0.95);
+    padding: 15px;
     border-radius: 10px;
+    z-index: 2000;
   }
   #navegacion.active ul {
     display: flex; 
