--- a/css/productos.css
+++ b/css/productos.css
@@ -14,10 +14,7 @@ body{
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  overflow-x: hidden; 
-  background: linear-gradient(135deg, rgb(6, 6, 6) , rgb(35, 35, 35) , rgba(22, 22, 22, 0.701));
-  background-size: 300% 300%;
-  animation: moverFondo 15s ease infinite;
+  overflow-x: hidden;
   position: relative;
 }
 @keyframes moverFondo {
@@ -26,7 +23,7 @@ body{
   100% { background-position: 0% 50%; }
 }
 .particula {
-  position: absolute;
+  position: fixed; /* cambia absolute por fixed */
   width: 6px;
   height: 6px;
   background: radial-gradient(circle, #ffffff, transparent);
@@ -34,7 +31,7 @@ body{
   animation: flotar 10s linear infinite;
   pointer-events: none;
   opacity: 0.8;
-  z-index: -1;
+  z-index: 0;
 }
 @keyframes flotar{
   0% {
