--- a/css/productos.css
+++ b/css/productos.css
@@ -22,6 +22,18 @@ body{
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
 }
+.fondo-animado {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(135deg, rgb(6, 6, 6), rgb(35, 35, 35), rgba(22, 22, 22, 0.701));
+  background-size: 300% 300%;
+  animation: moverFondo 15s ease infinite;
+  z-index: -2; /* debajo de todo */
+  overflow: hidden;
+}
 .particula {
   position: fixed; /* cambia absolute por fixed */
   width: 6px;
