--- a/css/productos.css
+++ b/css/productos.css
@@ -19,16 +19,17 @@ body{
 }
 
 .fondo-animado {
-  position: fixed;
+  position: fixed;     
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(135deg, rgb(6, 6, 6), rgb(35, 35, 35), rgba(22, 22, 22, 0.701));
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(135deg, rgb(6, 6, 6), rgb(35, 35, 35), rgba(22, 22, 22, 0.7));
   background-size: 300% 300%;
   animation: moverFondo 15s ease infinite;
-  z-index: -2; 
+  z-index: -999;      
   overflow: hidden;
+  pointer-events: none;  
 }
 .particula {
   position: absolute; 
