--- a/css/productos.css
+++ b/css/productos.css
@@ -546,7 +546,9 @@ main {
   to { opacity: 1; transform: scale(1); }
 }
 .logo img {
-  display: block;
+  height: 60px; 
+  width: auto; 
+  margin-left: 0; 
 }
 .menu-toggle {
   display: none;
