Añadiendo Clase mapa en etiqueta h2 span

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -295,3 +295,8 @@ footer {
    font-size: 1.6rem; 
    margin-bottom: 1.5rem; 
   }
+  
+.mapa h2 span { 
+  color: rgb(177, 0, 0);
+   font-weight: 600; 
+  }
