--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden; 
     width: 100%;
     height: 100%;
     color: #fff;
