--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,8 @@ body {
     padding: 0;
     overflow-x: hidden; 
     background: linear-gradient(135deg, rgb(6, 6, 6) , rgb(35, 35, 35) , rgba(22, 22, 22, 0.701));
+    background-size: 300% 300%;
+
     background-color: #000;
 }
 
