--- a/css/contactos.css
+++ b/css/contactos.css
@@ -300,11 +300,88 @@ footer {
   color: rgb(177, 0, 0);
    font-weight: 600; 
   }
-  
+
 .mapa iframe {
   border-radius: 0px;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
   width: 100%;
   max-width: 1000px;
   height: 450px;
+}
+
+.modal-cargando {
+  display: none; /* Oculto por defecto */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(10, 10, 10, 0.7);
+  backdrop-filter: blur(4px);
+  z-index: 2000;
+  justify-content: center;
+  align-items: center;
+}
+.modal-contenido {
+  background: linear-gradient(135deg, #111, #1e1e1e);
+  color: white;
+  padding: 30px 50px;
+  border-radius: 12px;
+  text-align: center;
+  box-shadow: 0 0 20px rgba(255, 0, 0, 0.4);
+  animation: aparecerModal 0.4s ease;
+}
+.loader {
+  border: 5px solid rgba(255, 255, 255, 0.2);
+  border-top: 5px solid #ff0000;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto 15px;
+  animation: girar 1s linear infinite;
+}
+@keyframes girar {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+@keyframes aparecerModal {
+  from { opacity: 0; transform: scale(0.8); }
+  to { opacity: 1; transform: scale(1); }
+}
+.logo img {
+  display: block;
+}
+.menu-toggle {
+  display: none;
+  font-size: 32px;
+  color: white;
+  cursor: pointer;
+  user-select: none;
+  position: absolute;
+  top: 22px;
+  right: 25px;
+  z-index: 9999 !important;
+  pointer-events: auto !important;
+}
+
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+  }
+   #navegacion ul {
+    display: none;
+    flex-direction: column;
+    gap: 15px;
+    position: absolute;
+    top: 80px;
+    right: 20px;
+    background: rgba(0, 0, 0, 0.95);
+    padding: 15px;
+    border-radius: 10px;
+    z-index: 2000;
+  }
+  #navegacion.active ul {
+    display: flex; 
+  }
 }
