--- a/css/index.css
+++ b/css/index.css
@@ -20,8 +20,8 @@ body {
     overflow-x: hidden; 
     background: linear-gradient(135deg, rgb(6, 6, 6) , rgb(35, 35, 35) , rgba(22, 22, 22, 0.701));
     background-size: 300% 300%;
-
-    background-color: #000;
+  animation: moverFondo 15s ease infinite;
+  position: relative;
 }
 
 .top-color-bar{
