--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,7 @@ header{
     display: flex;
     height: 80px;
     align-items: center;
+    justify-content: space-between;
 
 }
 .top-color-bar{
