--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,7 @@ header{
     align-items: center;
     justify-content: space-between;
     gap: 30px;
+    background: linear-gradient(180deg,  rgba (255,266,266,0.02), rgba256,255,2555,0,01 )
 
 }
 .top-color-bar{
