--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,8 @@ header{
     gap: 30px;
     background: linear-gradient(180deg,  rgba (255,266,266,0.02), rgba256,255,2555,0,01 )
     backdrop-filter: blur (6px) saturate (1.05);
+    padding: 40px 20px;
+
 
 }
 .top-color-bar{
