--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,8 @@ header{
     padding: 40px 20px;
     position: sticky;
     top: 0px
-    border_radius: px
+    border-raduis: 14px;
+    z-index
     
 
 
