Modificando Navegacion ul.

--- a/css/index.css
+++ b/css/index.css
@@ -46,9 +46,9 @@ header{
 header  :hover {
 transform: translateY(-2px);}
 
-#navegacion ul {
+#navegacion ul {list-style: none; display: flex; gap: 28px; align-items: center;
 
-    
+
 }
 
 
