--- a/css/index.css
+++ b/css/index.css
@@ -55,7 +55,8 @@ transform: translateY(-2px);}
 
     position: relative;
     text-decoration: none;
-    color:var(--text)
+    color:var(--text);
+    font-weight: 600;
 }
 
 
