--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ header{
     backdrop-filter: blur (6px) saturate(1.05);
     border-radius: 14px;
     z-index: 1100
-    box-shadow: 0 8px 30px rgba(0,0,0,0,6)
+    box-shadow: 0 8px 30px rgba(0,0,0,0,6);
     transition: transform var (--transition- fast),box-shadow var (--transition-fast), background var (----transition-fast);
 
 
