--- a/css/index.css
+++ b/css/index.css
@@ -60,10 +60,8 @@ transform: translateY(-2px);}
     outline-offset: 6px;
 }
 
-#navegacion a:focus{ box-shadow: 0 0 0 4px rgba(255,76,97,0,08);border-radius: 6px;
+#navegacion a:focus{ box-shadow: 0 0 0 4px rgba(255,76,97,0,08);border-radius: 6px;}
 
-
-}
 
 
 
