--- a/css/index.css
+++ b/css/index.css
@@ -69,7 +69,7 @@ height: 3px;
 left: 0;
 right: 0;
 bottom: -6px;
-
+background: linear-gradient(90deg, transparent, var(--accent), transparent);
 
 }
 
