--- a/css/index.css
+++ b/css/index.css
@@ -70,6 +70,9 @@ left: 0;
 right: 0;
 bottom: -6px;
 background: linear-gradient(90deg, transparent, var(--accent), transparent);
+transform: scaleX(0);
+
+
 
 }
 
