--- a/css/index.css
+++ b/css/index.css
@@ -71,7 +71,7 @@ right: 0;
 bottom: -6px;
 background: linear-gradient(90deg, transparent, var(--accent), transparent);
 transform: scaleX(0);
-
+transform-origin: left;
 
 
 }
