Modificando Navegacion A.Activo::After.

--- a/css/index.css
+++ b/css/index.css
@@ -77,7 +77,8 @@ border-radius: 6px;
 }
 
 #navegacion a:hover::after,
-#navegacion a.activo::after { }
+#navegacion a.activo::after {transform: scaleX(1); }
+
 
 
 
