--- a/css/index.css
+++ b/css/index.css
@@ -60,7 +60,7 @@ transform: translateY(-2px);}
     outline-offset: 6px;
 }
 
-#navegacion a:focus{ box-shadow: 0 0 0 4px rgba(255,76,97,0,08);border-radius: 6px;}
+#navegacion a:focus{ box-shadow: 0 0 0 4px firebrick rgba(255,76,97,0,08);border-radius: 6px;}
 
 #navegacion a::after {
 content: "";
@@ -80,6 +80,7 @@ border-radius: 6px;
 #navegacion a.activo::after {transform: scaleX(1); }
 header.scrolled {
 padding: 8px 22px;
+box-shadow: 0 12px 36px black;
 
 }
 
