--- a/css/index.css
+++ b/css/index.css
@@ -88,6 +88,7 @@ transform: translateY(-4px);
 position: relative;
 width: 100%;
 height: 100vh;
+background-image: url(/galeria/fondomenu.jpeg);
 
 
 
