--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,7 @@ position: relative;
 width: 100%;
 height: 100vh;
 background-image: url(/galeria/fondomenu.jpeg);
+background-position: center;
 
 
 
