--- a/css/index.css
+++ b/css/index.css
@@ -90,6 +90,7 @@ width: 100%;
 height: 100vh;
 background-image: url(/galeria/fondomenu.jpeg);
 background-position: center;
+background-repeat: no-repeat;
 
 
 
