--- a/css/index.css
+++ b/css/index.css
@@ -91,7 +91,7 @@ height: 100vh;
 background-image: url(/galeria/fondomenu.jpeg);
 background-position: center;
 background-repeat: no-repeat;
-
+background-size: cover;
 
 
 }
