--- a/css/index.css
+++ b/css/index.css
@@ -92,7 +92,7 @@ background-image: url(/galeria/fondomenu.jpeg);
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
-
+background-attachment: fixed;
 
 }
 
