--- a/css/index.css
+++ b/css/index.css
@@ -94,7 +94,7 @@ background-repeat: no-repeat;
 background-size: cover;
 background-attachment: fixed;
 display: flex;
-
+align-items: center;
 }
 
 
