--- a/css/index.css
+++ b/css/index.css
@@ -107,6 +107,13 @@ background-color: #000;
 z-index: 1;
 }
 
+.content{
+
+
+    
+}
+
+
 .top-color-bar{
     width: 100%;
     background-color: #000;
