--- a/css/index.css
+++ b/css/index.css
@@ -220,6 +220,7 @@ z-index: 1;
 .text-content p {
     font-size: 1.2em;
     font-weight: 300;
+    color: #fff;
 }
 
 .text-content p:nth-of-type(1) {
