--- a/css/index.css
+++ b/css/index.css
@@ -328,7 +328,7 @@ align-items: center;
 .modal-contenido{
 background: linear-gradient(135deg, #000, #1e1e1e);
 color: white;
-
+padding: 30px 50px;
 
 
 }
