--- a/css/index.css
+++ b/css/index.css
@@ -330,7 +330,7 @@ background: linear-gradient(135deg, #000, #1e1e1e);
 color: white;
 padding: 30px 50px;
 border-radius: 12px;
-
+text-align: center;
 
 
 }
