Modifico modal-contenido.

--- a/css/index.css
+++ b/css/index.css
@@ -332,5 +332,5 @@ padding: 30px 50px;
 border-radius: 12px;
 text-align: center;
 box-shadow: 0 0 20px rgb(235, 15, 15);
-
+animation: aparecermodal 0.4s ease;
 }
