--- a/css/index.css
+++ b/css/index.css
@@ -339,6 +339,7 @@ animation: aparecermodal 0.4s ease;
 border: 5px solid rgb(255, 255, 255, 0.2);
 border-top: 5px solid #ff0000;
 border-radius: 50%;
+width: 50px;
 
 
 }
