--- a/css/index.css
+++ b/css/index.css
@@ -340,6 +340,7 @@ border: 5px solid rgb(255, 255, 255, 0.2);
 border-top: 5px solid #ff0000;
 border-radius: 50%;
 width: 50px;
+height: 50px;
 
 
 }
