--- a/css/index.css
+++ b/css/index.css
@@ -348,7 +348,7 @@ animation: girar 1s linear infinite;
 
 @keyframes girar{
 from {transform: rotate(0deg);}
-
+to {transform: rotate(360deg);}
 
 
 }
