--- a/css/index.css
+++ b/css/index.css
@@ -355,6 +355,6 @@ to {transform: rotate(360deg);}
 
 @keyframes aparecermodal{
 from{ opacity: 0; transform: scale(0.8);}
-
+to { opacity: 1; transform: scale(1);}
 
 }
