--- a/css/index.css
+++ b/css/index.css
@@ -136,7 +136,7 @@ z-index: 1;
 .logo img {
     height: 70px; 
     transition: transform 0.4s ease-out;
-    filter 0.4s ease-out;
+    filter: transform 0.4s ease-out;
     cursor: pointer;
 }
 
