--- a/css/contactos.css
+++ b/css/contactos.css
@@ -2,6 +2,7 @@
 /*modifica todo desde aca*/
 body {
   font-family: Arial, sans-serif;
+  font-size: 16px;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
