--- a/css/contactos.css
+++ b/css/contactos.css
@@ -1,5 +1,15 @@
 
-/*modifica todo desde aca*/
+:root {
+  --text: #eaeaea;
+  --accent: #7a0000;
+  --transition-fast: 180ms;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: Arial, sans-serif;
   font-size: 16px;
