--- a/css/servicios.css
+++ b/css/servicios.css
@@ -368,7 +368,8 @@ section li { margin-bottom:10px; color:var(--muted); }
 .modal-cargando {
 display: none;
 position: fixed;
-
+top: 0;
+left: 0;
 
 }
 
