--- a/css/servicios.css
+++ b/css/servicios.css
@@ -375,6 +375,8 @@ height: 100%;
 background: rgba(10, 10, 10, 0.7);
 backdrop-filter: blur(4px);
 z-index: 2000;
+justify-content: center;
+align-items: center;
 }
 
 
