--- a/css/servicios.css
+++ b/css/servicios.css
@@ -379,10 +379,10 @@ justify-content: center;
 align-items: center;
 }
 .modal-contenido {
+background: linear-gradient(135deg, #111, #1e1e1e);
 
 
 
-  
 }
 
 
