--- a/css/servicios.css
+++ b/css/servicios.css
@@ -381,7 +381,8 @@ align-items: center;
 .modal-contenido {
 background: linear-gradient(135deg, #111, #1e1e1e);
 color: white;
-
+padding: 30px 50px;
+border-radius: 12px;
 
 }
 
