--- a/css/servicios.css
+++ b/css/servicios.css
@@ -383,7 +383,7 @@ background: linear-gradient(135deg, #111, #1e1e1e);
 color: white;
 padding: 30px 50px;
 border-radius: 12px;
-
+text-align: center;
 }
 
 
