Arreglo en navegacion.

--- a/css/index.css
+++ b/css/index.css
@@ -30,11 +30,11 @@ header{
     align-items: center;
     justify-content: space-between;
     gap: 30px;
-    background: linear-gradient(180deg,  rgba (255,266,266,0.02), rgba256,255,2555,0,01 );
-    backdrop-filter: blur (6px) saturate(1.05);
+    background: linear-gradient(180deg,  rgba (255,266,266,0.02), rgba(256,255,2555,0,01 );
+    backdrop-filter: blur(6px) saturate(1.05);
     border-radius: 14px;
     z-index: 1100;
-    box-shadow: 0 8px 30px rgba(0,0,0,0,6);
+    box-shadow: 0 8px 30px rgba(0,0,0,0.6);
     transition: transform var (--transition- fast),box-shadow var (--transition-fast), background var (----transition-fast);
 
 
