--- a/css/servicios.css
+++ b/css/servicios.css
@@ -390,7 +390,10 @@ animation: aparecerModal 0.4s ease;
 .loader { 
 border: 5px solid rgba(255, 255, 255, 0.2);
 border-top: 5px solid #ff0000;
-border-radius: 50%;  
+border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto 15px;
 }
 
 
