--- a/css/servicios.css
+++ b/css/servicios.css
@@ -400,6 +400,10 @@ border-radius: 50%;
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+@keyframes aparecerModal {
+  from { opacity: 0; transform: scale(0.8); }
+  to { opacity: 1; transform: scale(1); }
+}
 
 
 .animar { transition: transform var(--transition-med) ease-in-out; }
