--- a/css/index.css
+++ b/css/index.css
@@ -37,6 +37,8 @@ header{
     box-shadow: 0 8px 30px rgba(0,0,0,0.6);
     transition: transform var(--transition-fast),box-shadow var(--transition-fast), background var(----transition-fast);
     padding: 40px 20px;
+    position: sticky;
+    top: 0px;
 
 }
 
