--- a/css/servicios.css
+++ b/css/servicios.css
@@ -518,3 +518,9 @@ border-radius: 50%;
     padding: 10px;
   }
 }
+.fab{
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  background: #ff69b4;
+}
