--- a/css/servicios.css
+++ b/css/servicios.css
@@ -523,4 +523,7 @@ border-radius: 50%;
   bottom: 25px;
   right: 25px;
   background: #ff69b4;
+  color: white;
+  font-size: 22px;
+  font-weight: bold;
 }
