--- a/css/servicios.css
+++ b/css/servicios.css
@@ -523,6 +523,8 @@ border-radius: 50%;
   bottom: 25px;
   right: 25px;
   background: #ff69b4;
+  width: 45px;
+  height: 45px;
   color: white;
   font-size: 22px;
   font-weight: bold;
