Agregando display y centrando contenido

--- a/css/servicios.css
+++ b/css/servicios.css
@@ -528,4 +528,7 @@ border-radius: 50%;
   color: white;
   font-size: 22px;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
