Agregando border y sombra

--- a/css/servicios.css
+++ b/css/servicios.css
@@ -531,4 +531,6 @@ border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
 }
