--- a/css/servicios.css
+++ b/css/servicios.css
@@ -533,4 +533,8 @@ border-radius: 50%;
   justify-content: center;
   border-radius: 50%;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+  cursor: pointer;
+  opacity: 0;
+  transform: scale(0.8);
+  transition: all 0.3s ease;
 }
