--- a/css/servicios.css
+++ b/css/servicios.css
@@ -539,3 +539,7 @@ border-radius: 50%;
   transition: all 0.3s ease;
   z-index: 9999;
 }
+.fab:hover {
+  transform: scale(1.1);
+  background: #ff85c1;
+}
