--- a/css/contactos.css
+++ b/css/contactos.css
@@ -208,7 +208,48 @@ outline-offset:6px;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 30px;
+  background-color: black;
+}
+
+.contacto {
+  text-align: center;
+  padding: 20px;
+  max-width: 250px;
+  background-color: black; 
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+/*modifica esto */
+.contacto:hover {
+  transform: scale(1.07);
+  box-shadow: 0 0 25px #830808cc;
+}
+.contacto h3 {
+  margin-bottom: 15px;
+  font-weight: bold;
+}
+.contacto img {
+  display: block;
+  margin: 20px auto;
+  max-width: 80px;
+  transition: 0.3s;
+}
+.contacto img:hover{
+  transform: scale(1.1);
+  opacity: 0.9;
+}
+.contacto a{
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+ 
+}
+.contacto a:hover {
+  text-decoration: underline;
+}
+/*hasta aca*/
+.mapa iframe {
+  display: block;
   width: 100%;
   padding: 0 5vw;
 }
